--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -11,7 +11,7 @@
                                 <div class="form-group">
                                     <label for="email" class="col-sm-3 control-label">Event:<span>*</span></label>
                                     <div class="col-sm-9">
-                                     <%= f.select :name,  ["Lunch", "Dinner", "Snacks"] , {:prompt => "--Select--"}, :class => 'form-control' %>
+                                     <%= f.select :name,  ["Lunch", "Dinner", "Snacks"] , {:prompt => "--Select--"}, :class => 'form-control' , :required=> true%>
                                       
                                     </div>
                                 </div>
@@ -19,7 +19,7 @@
                                 <div class="form-group">
                                     <label for="job_title" class="col-sm-3 control-label">Date:<span>*</span></label>
                                     <div class="col-sm-9">
-                                       <%= f.date_field :date_of_event , :value=> "", :class=>"form-control"%>  
+                                       <%= f.date_field :date_of_event , :value=> "", :class=>"form-control", :required=> true%>  
                                     </div>
                                 </div>
                                         <div class="form-group">
@@ -31,7 +31,7 @@
                                   <div class="form-group">
                                     <label for="phone_no" class="col-sm-3 control-label">Total Amount:<span>*</span></label>
                                     <div class="col-sm-9">
-                                       <%= f.number_field :amount , :value=> "", :class=>"form-control", :placeholder=>"Total Amount"%>  
+                                       <%= f.number_field :amount , :value=> "", :class=>"form-control", :placeholder=>"Total Amount", :required=> true%>  
                                     </div>
                                 </div>
                                  <div class="form-group ">
